change local asset paths

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <a-scene inspector="url: ./aframeeditor.min.js">
       <!-- Assets -->
       <a-assets>
-        <a-asset-item id="pamats-01" src="./Assets/Pamats_01.obj"></a-asset-item>
-        <a-asset-item id="pamats-02" src="./Assets/Pamats_02.obj"></a-asset-item>
-        <a-asset-item id="pamats-03" src="./Assets/Pamats_03.obj"></a-asset-item>
-        <a-asset-item id="pamats-04" src="./Assets/Pamats_04.obj"></a-asset-item>
-        <a-asset-item id="vidus-01" src="./Assets/Vidus_01.obj"></a-asset-item>
-        <a-asset-item id="vidus-02" src="./Assets/Vidus_02.obj"></a-asset-item>
-        <a-asset-item id="vidus-03" src="./Assets/Vidus_03.obj"></a-asset-item>
+        <a-asset-item id="pamats-01" src="Assets/Pamats_01.obj"></a-asset-item>
+        <a-asset-item id="pamats-02" src="Assets/Pamats_02.obj"></a-asset-item>
+        <a-asset-item id="pamats-03" src="Assets/Pamats_03.obj"></a-asset-item>
+        <a-asset-item id="pamats-04" src="Assets/Pamats_04.obj"></a-asset-item>
+        <a-asset-item id="vidus-01" src="Assets/Vidus_01.obj"></a-asset-item>
+        <a-asset-item id="vidus-02" src="Assets/Vidus_02.obj"></a-asset-item> 
+        <a-asset-item id="vidus-03" src="Assets/Vidus_03.obj"></a-asset-item>
       </a-assets>
 
       <!-- Fixed camera with mouse control and focused FOV -->
