--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="./Components/ball-shooter.js"></script>
   </head>
   <body>
-    <a-scene inspector="url: ./aframeeditor.min.js">
+    <a-scene inspector="url: ./aframeeditor.min.js" xr-mode-ui="enabled: false">
       <!-- Assets -->
       <a-assets>
         <a-asset-item id="pamats-01" src="Assets/Pamats_01.obj"></a-asset-item>
